force-app/main/default/objects/FS_BaseConocimiento__c/FS_BaseConocimiento__c.object-meta.xml
<CustomObject>
    <label>Base de Conocimiento</label>
    <nameField>
        <label>Nombre de Base de Conocimiento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bases de Conocimientos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>