force-app/main/default/objects/FS_BaseConocimiento__c/fields/FS_Activo__c.field-meta.xml
<CustomField>
    <fullName>FS_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>