force-app/main/default/objects/FS_BaseConocimiento__c/fields/FS_Contenido__c.field-meta.xml
<CustomField>
    <fullName>FS_Contenido__c</fullName>
    <label>Contenido</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>