force-app/main/default/objects/FS_BaseConocimiento__c/fields/FS_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>FS_Cuenta__c</fullName>
    <formula>FS_ProductoAdquirido__r.FS_Cuenta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta</label>
    <type>Text</type>
</CustomField>