force-app/main/default/objects/FS_BaseConocimiento__c/fields/FS_Modulo__c.field-meta.xml
<CustomField>
    <fullName>FS_Modulo__c</fullName>
    <formula>TEXT(FS_ProductoAdquirido__r.FS_Modulo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Módulo</label>
    <type>Text</type>
</CustomField>