force-app/main/default/objects/FS_BaseConocimiento__c/fields/FS_Producto__c.field-meta.xml
<CustomField>
    <fullName>FS_Producto__c</fullName>
    <formula>TEXT(FS_ProductoAdquirido__r.FS_Producto__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto</label>
    <type>Text</type>
</CustomField>