force-app/main/default/objects/FS_BaseConocimiento__c/fields/FS_ProductoAdquirido__c.field-meta.xml
<CustomField>
    <fullName>FS_ProductoAdquirido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto Adquirido</label>
    <referenceTo>FS_ProductoAdquirido__c</referenceTo>
    <relationshipLabel>Bases de Conocimientos</relationshipLabel>
    <relationshipName>Bases_de_Conocimientos</relationshipName>
    <type>Lookup</type>
</CustomField>