force-app/main/default/objects/FS_BaseConocimiento__c/fields/FS_SubModulo__c.field-meta.xml
<CustomField>
    <fullName>FS_SubModulo__c</fullName>
    <formula>TEXT(FS_ProductoAdquirido__r.FS_SubModulo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Módulo</label>
    <type>Text</type>
</CustomField>