force-app/main/default/objects/FS_BaseConocimiento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FS_Cuenta__c</columns>
    <columns>FS_Producto__c</columns>
    <columns>FS_Modulo__c</columns>
    <columns>FS_SubModulo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FS_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>